Better syntax for offset-by classes

--- a/Assets/_scss/base/_grid.scss
+++ b/Assets/_scss/base/_grid.scss
@@ -38,11 +38,7 @@ $ Grid Classes
   // Creating .columns.offset-by-# classes
   @for $i from 1 through $totalColumns - 1 {
     &.offset-by-#{convert-number-to-word($i)} {
-      @if $direction == ltr {
-        margin-left: gridCalc($i, $totalColumns) + ($columnGutter);
-      } @else {
-        margin-right: gridCalc($i, $totalColumns) + ($columnGutter);
-      }
+      margin-#{$start}: gridCalc($i, $totalColumns) + ($columnGutter);
     }
   }
 }
