--- a/Assets/_scss/components/_typography.scss
+++ b/Assets/_scss/components/_typography.scss
@@ -67,7 +67,8 @@ h6, .h6 {
 }
 
 hgroup {
-  h1, h2, h3, h4, h5, h6 { margin-top: 0; }
+  h1, h2, h3,
+  h4, h5, h6 { margin-top: 0; }
   .csc-firstHeader { margin-bottom: 0; }
 }
 
@@ -96,7 +97,6 @@ p a { /* Increasing the Clickable Area of Inline Links */
 
 /* =============================================================================
 $ Lists
-  Contents: 1:
 ================================================================================ */
 li > ul,
 li > ol { /* Remove vertical spacing from nested lists */
