--- a/Assets/_scss/components/_forms.scss
+++ b/Assets/_scss/components/_forms.scss
@@ -52,7 +52,7 @@ input[type="submit"] {
   cursor: pointer;
   padding: 0.5em; // Set in em's so we can change the size of the button depending on the font-size
 
-  border: 1px solid $cd-primary;
+  border: 0;
   background: $cd-primary;
 
   font-size: .8em;
