Fixed typo on convert number-to-word function

--- a/Assets/_scss/_settings/_functions.scss
+++ b/Assets/_scss/_settings/_functions.scss
@@ -7,7 +7,7 @@
 
 
 // =============================================================================
-// Convert to number
+// Convert number to word
 // =============================================================================
 @function convert-number-to-word($num) {
   $count: 1;
