--- a/Assets/_scss/_settings/_shared.scss
+++ b/Assets/_scss/_settings/_shared.scss
@@ -10,15 +10,17 @@
  * ========================================================== */
 
 
-/* ========================== Reset list ========================= */
+
 %reset-list {
+/* ========================== Reset list ========================= */
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-/* ================== Cross browser inline-block ================= */
+
 %inline-block {
+/* ================== Cross browser inline-block ================= */
   display: inline-block;
   @if $isOldIE == 1 {
     *display: inline;
@@ -28,12 +30,14 @@
 
 /* ========================= Text Replace ======================== */
 %replace {
+/* ========================= Text Replace ======================== */
   font: 0/0 a;
   text-shadow: none;
 }
 
-/* ====================== CSS3 Word-breaker ====================== */
+
 %hyphens {
+/* ====================== CSS3 Word-breaker ====================== */
   -ms-word-break: break-all;
       word-break: break-all;
   -webkit-hyphens: auto;
