Moved @viewport rules to the top of the doc

--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -7,6 +7,15 @@
  * ========================================================== */
 
 
+
+@if $isResponsive == 1 {
+/* =============================================================================
+$ RWD Viewport rules
+================================================================================ */
+  @include viewport(device-width);
+
+
+}
 /* =============================================================================
 $ HTML5 display definitions
 ================================================================================ */
