--- a/Assets/_scss/components/_media.scss
+++ b/Assets/_scss/components/_media.scss
@@ -42,12 +42,14 @@ video {
   &::-webkit-media-controls-panel {
     background-color: rgba(0, 0, 0, .6);
     -webkit-transition: all .6s;
+            transition: all .6s;
     &:hover {
       background-color: rgba(0, 0, 0, .8);
     }
   }
   &::-webkit-media-controls-play-button:hover {
     -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
   &::-webkit-media-controls-timeline {
     border-radius: 3px;
@@ -62,5 +64,6 @@ audio {
   min-width: 65%;
   &::-webkit-media-controls-play-button:hover {
     -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
 }
