--- a/Assets/_scss/components/_media.scss
+++ b/Assets/_scss/components/_media.scss
@@ -38,7 +38,7 @@ $ Video
 ================================================================================ */
 video {
   @extend %non-print; // Will be hidden on print
-  
+
   &::-webkit-media-controls-panel {
     background-color: rgba(0, 0, 0, .6);
     -webkit-transition: all .6s;
@@ -62,6 +62,8 @@ $ Audio
 ================================================================================ */
 audio {
   min-width: 65%;
+
+  @extend %non-print; // Will be hidden on print
   &::-webkit-media-controls-play-button:hover {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
