Remove unnecessary underscore in document head

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-// _variables.scss
+// variables.scss
 //
 // Merges all listed stylesheets and does the SASS & Compass magic
 // DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
