Fixed @viewport <meta> tag documentation

--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -134,7 +134,9 @@
 // =============================================================================
 // CSS Viewport rule Mixin
 // =============================================================================
-// Basicly the same as <meta name="viewport"> but the future proof way
+// Basicly the same as <meta name="viewport" content="width=device-width"> 
+// but the future proof way.
+// 
 // DOCS: http://dev.w3.org/csswg/css-device-adapt/
 // =============================================================================
 @mixin viewport($arg) {
