--- a/Assets/_scss/base/_normalize.scss
+++ b/Assets/_scss/base/_normalize.scss
@@ -38,9 +38,9 @@ summary {
   display: block;
 }
 
-/*
- * Corrects `inline-block` display not defined in IE6/7/8/9 & FF3.
- */
+// /*
+//  * Corrects `inline-block` display not defined in IE6/7/8/9 & FF3.
+//  */
 
 audio,
 canvas,
