Fixed .siteLogo positioning

--- a/Assets/_scss/base/_base.scss
+++ b/Assets/_scss/base/_base.scss
@@ -43,7 +43,7 @@ $ Logos
   .site-header & {
     position: absolute;
     top: 10px;
-    left: ($columnGutter / 2) +px;
+    left: 0;
   }
   .site-footer & { }
 }
