--- a/Assets/_scss/base/_base.scss
+++ b/Assets/_scss/base/_base.scss
@@ -54,14 +54,17 @@ $ Chromeframe
 ================================================================================ */
 .chromeframe {
   display: block;
-  height: 41px;
+  height: 3.5em;
   border-bottom: 1px $basicBorderStyle #e7db9c;
   background: #faf6e8;
+
   font-size: 12px;
   font-size: rs(12, $unit: rem);
-  line-height: 41px;
   color: darken(#faf6e8, 60%);
+  line-height: 3.5em;
   text-align: center;
-  a { border-bottom: 1px dotted; }
+  color: darken(#faf6e8, 60%);
+
   @extend %non-print; // Will be hidden on print
+  a { border-bottom: 1px dotted; }
 }
