--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -84,10 +84,7 @@ $ Secific forms
 /* ========================= Searchform ======================== */
 /*form*/.searchform {
   label { }
-  input {
-    float: left;
-    display: block;
-  }
+  input { }
   input[type="search"] { }
   input[type="submit"] { }
 }
