Fixed section commenting output in grid.scss

--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -6,9 +6,9 @@
  * ========================================================== */
 
 
-/* =============================================================================
-$ Variables
-================================================================================ */
+// =============================================================================
+// $ Variables
+// =============================================================================
 $columWidth:      ($layoutWidth + $columnGutter) / $totalColumns - $columnGutter !default;
 $grid-direction:  $start;
 
