--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -35,6 +35,9 @@ input[type="week"] {
 /* ======================== Textinputs ========================= */
 textarea {
   min-height: 70px;
+
+  overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9. */
+  vertical-align: top; /* Improves readability and alignment in all browsers. */
 }
 
 /* ========================= Checkboxes ======================== */
@@ -64,6 +67,31 @@ input[type="submit"] {
 /* =============================================================================
 $ General styling of Form Fields
 ================================================================================ */
+fieldset {
+  /* Define consistent border, margin, and padding. */
+  border: 1px $basicBorderStyle $basicBorderColor;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+form {
+  @if $isOldIE == 1 {
+    /* Corrects margin displayed oddly in IE6/7. */
+    margin: 0;
+  }
+  ol,
+  ul { @extend %reset-list; }
+}
+legend {
+  padding: 0;
+  /* Corrects color not being inherited in IE6/7/8/9. */
+  border: 0;
+  @if $isOldIE == 1 {
+    /* Corrects text not wrapping in FF3. */
+    white-space: normal;
+    /* Corrects alignment displayed oddly in IE6/7. */
+    *margin-left: -7px;
+  }
+}
 label {
   display: block;
   font-weight: $bold;
@@ -71,10 +99,6 @@ label {
   &[for] {
     cursor: pointer;
   }
-}
-form {
-  ol,
-  ul { @extend %reset-list; }
 }
 
 
