--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -10,7 +10,11 @@
 $ Attachements & Images
   Contents: 1: Make Images & Attachements responsive
             2: Decrease font-size on figcaption elements
-            3: Styling the alt="" Text on images ( http://csswizardry.com/2011/06/styling-alt-text-on-images/ )
+            3: Styling the alt="" Text on images
+               http://csswizardry.com/2011/06/styling-alt-text-on-images/
+            4. Removes border when inside `a` element in IE6/7/8/9, FF3.
+            5. Improves image quality when scaled in IE7.
+               code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
 ================================================================================ */
 embed,
 iframe,
@@ -21,15 +25,21 @@ img { /* 1 */
 img[height] { /* 1 */
   height: auto;
 }
-figure > img {
-  display: block;
+figure {
+  /* Addresses margin not present in IE6/7/8/9, S5, O11. */
+  margin: 0;
+  > img {
+    display: block;
+  }
 }
 figcaption { /* 2 */
   font-size: ($baseFontSize - 2) +px;
   font-size: rs(($baseFontSize - 2), $unit: rem);
 }
-img { /* 3 */
-  font-style: italic;
+img {
+  font-style: italic; /* 3 */
+  border: 0; /* 4 */
+  @if $isOldIE == 1 { -ms-interpolation-mode: bicubic; /* 5 */ }
 }
 
 
@@ -67,5 +77,22 @@ audio {
   &::-webkit-media-controls-play-button:hover {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
+  }
+  &:not([controls]) {
+    /* Prevents modern browsers from displaying `audio` without controls. */
+    display: none;
+    /* Remove excess height in iOS5 devices. */
+    height: 0;
+  }
+}
+
+
+/* =============================================================================
+$ SVG
+================================================================================ */
+svg {
+  &:not(:root) {
+    /* Corrects overflow displayed oddly in IE9. */
+    overflow: hidden;
   }
 }
