--- a/Assets/_scss/generic/_normalize.scss
+++ b/Assets/_scss/generic/_normalize.scss
@@ -1,29 +1,25 @@
+@if $isResponsive == 1 {
+  /* =============================================================================
+  $ RWD Viewport rules
+  ================================================================================ */
+  @include viewport(device-width);
+}
+
 /* ==========================================================
- * normalize.scss (v 2.0.1)
- * Updated: 09/10/2012
+ * normalize.scss
  *
  * Normalize the browser-default styling
  * DOCS: http://necolas.github.com/normalize.css/
  * ========================================================== */
 
 
-
-@if $isResponsive == 1 {
 /* =============================================================================
-$ RWD Viewport rules
-================================================================================ */
-  @include viewport(device-width);
-
-
-}
-/* =============================================================================
-$ HTML5 display definitions
+$ Normalize HTML5 display definitions
 ================================================================================ */
 
 /*
  * Corrects `block` display not defined in IE6/7/8/9 & FF3.
  */
-
 article,
 aside,
 details,
@@ -38,38 +34,26 @@ summary {
   display: block;
 }
 
-// /*
-//  * Corrects `inline-block` display not defined in IE6/7/8/9 & FF3.
-//  */
-
+/*
+ * Corrects `inline-block` display not defined in IE 8/9.
+ */
 audio,
 canvas,
 video {
-  @extend %inline-block;
-}
-
-/*
- * Prevents modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS5 devices.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
+    display: inline-block;
 }
 
 /*
  * Addresses styling for `hidden` attribute not present in IE7/8/9, FF3, S4.
  * Known issue: no IE6 support.
  */
-
 [hidden] {
   display: none;
 }
 
 
 /* =============================================================================
-$ Base
+ Normalize Base
 ================================================================================ */
 
 /*
@@ -79,19 +63,18 @@ $ Base
  *    user zoom.
  * 3. Forces vertical scrollbar to prevent jumpy page
  */
-
 html {
   @if $isOldIE == 1 { font-size: 100%; /* 1 */ }
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
   overflow-y: scroll; /* 3 */
 }
+
 @if $isOldIE == 1 {
   /*
    * Addresses `font-family` inconsistency between `textarea` and other form
    * elements.
    */
-
   html,
   button,
   input,
@@ -101,288 +84,16 @@ html {
   }
 }
 
-/*
- * Addresses margins handled incorrectly in IE6/7.
- */
-
-body {
-  margin: 0;
-  color: $baseTextColor;
-  font: $baseFontWeight #{$baseFontSize/16*100}%/$basicSpacing $baseFontFamily;
-  background: $bodyBackground;
-  -webkit-font-smoothing: antialiased;
-  text-align: $start;
-}
-
-
 
 /* =============================================================================
-$ Links
+ Normalize Forms
 ================================================================================ */
-
-/*
- * Addresses `outline` inconsistency between Chrome and other browsers.
- */
-
-a:focus {
-  outline: thin dotted;
-}
-
-/*
- * Improves readability when focused and also mouse hovered in all browsers.
- * people.opera.com/patrickl/experiments/keyboard/test
- */
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
-
-/* =============================================================================
-$ Typography
-================================================================================ */
-
-/*
- * Addresses styling not present in IE7/8/9, S5, Chrome.
- */
-
-abbr[title] {
-  border-bottom: 1px dotted;
-  cursor: help;
-}
-
-/*
- * Addresses style set to `bolder` in FF3+, S4/5, Chrome.
- */
-
-b,
-strong {
-  font-weight: $bold;
-}
-
-/*
- * Addresses styling not present in S5, Chrome.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/*
- * Addresses styling not present in IE6/7/8/9.
- */
-
-mark {
-  background: $cd-primary;
-  color: color-adjust($cd-primary, 100%);
-}
-
-
-// Will be set in typography.scss
-// /*
-//  * Addresses margins set differently in IE6/7.
-//  */
-//
-// p,
-// pre {
-//   margin: 1em 0;
-// }
-
-
-/*
- * Corrects font family set oddly in IE6, S4/5, Chrome.
- * en.wikipedia.org/wiki/User:Davidgothberg/Test59
- */
-
-code,
-kbd,
-pre,
-samp {
-  font-family: $monoFontFamily;
-  @if $isOldIE == 1 { _font-family: 'courier new', monospace; }
-  font-size: 1em;
-}
-
-/*
- * Improves readability of pre-formatted text in all browsers.
- */
-
-pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-
-/*
- * Addresses CSS quotes not supported in IE6/7.
- */
-
-q {
-  quotes: none;
-}
-
-@if $isOldIE == 1 {
-  /*
-   * Addresses `quotes` property not supported in S4.
-   */
-
-  q:before,
-  q:after {
-    content: '';
-    content: none;
-  }
-}
-
-small {
-  font-size: 80%;
-}
-
-/*
- * Prevents `sub` and `sup` affecting `line-height` in all browsers.
- * gist.github.com/413930
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-@if $isOldIE == 1 {
-/* =============================================================================
-$ Lists
-================================================================================ */
-
-  /*
-   * Addresses margins set differently in IE6/7.
-   */
-
-  // Will be set in typography.scss
-  // dl,
-  // menu,
-  // ol,
-  // ul {
-  //  margin: 1em 0;
-  // }
-
-  dd {
-    margin: 0 0 0 40px;
-  }
-
-  /*
-   * Addresses paddings set differently in IE6/7.
-   */
-
-  menu,
-  ol,
-  ul {
-    padding: 0 0 0 40px;
-  }
-
-  /*
-   * Corrects list images handled incorrectly in IE7.
-   */
-
-  nav ul,
-  nav ol {
-    list-style: none;
-    list-style-image: none;
-  }
-}
-
-/* =============================================================================
-$ Embedded Content
-================================================================================ */
-
-/*
- * 1. Removes border when inside `a` element in IE6/7/8/9, FF3.
- * 2. Improves image quality when scaled in IE7.
- *    code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
- */
-
-img {
-  border: 0; /* 1 */
-  @if $isOldIE == 1 { -ms-interpolation-mode: bicubic; /* 2 */ }
-}
-
-/*
- * Corrects overflow displayed oddly in IE9.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-
-/* =============================================================================
-$ Figures
-================================================================================ */
-
-/*
- * Addresses margin not present in IE6/7/8/9, S5, O11.
- */
-
-figure {
-  margin: 0;
-}
-
-
-/* =============================================================================
-$ Forms
-================================================================================ */
-
-@if $isOldIE == 1 {
-  /*
-   * Corrects margin displayed oddly in IE6/7.
-   */
-
-  form {
-    margin: 0;
-  }
-}
-
-/*
- * Define consistent border, margin, and padding.
- */
-
-fieldset {
-  border: 1px $basicBorderStyle $basicBorderColor;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/*
- * 1. Corrects color not being inherited in IE6/7/8/9.
- * 2. Corrects text not wrapping in FF3.
- * 3. Corrects alignment displayed oddly in IE6/7.
- */
-
-legend {
-  border: 0; /* 1 */
-  padding: 0;
-  @if $isOldIE == 1 {
-    white-space: normal; /* 2 */
-    *margin-left: -7px; /* 3 */
-  }
-}
 
 /*
  * 1. Corrects font size not being inherited in all browsers.
  * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome.
  * 3. Improves appearance and consistency in all browsers.
  */
-
 button,
 input,
 select,
@@ -399,7 +110,6 @@ textarea {
  * Addresses FF3/4 setting `line-height` on `input` using `!important` in the
  * UA stylesheet.
  */
-
 button,
 input {
   line-height: normal;
@@ -414,7 +124,6 @@ input {
  * 4. Removes inner spacing in IE7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE6.
  */
-
 button,
 html input[type="button"], /* 1 */
 input[type="reset"],
@@ -429,7 +138,6 @@ input[type="submit"] {
 /*
  * Re-set default cursor for disabled elements.
  */
-
 button[disabled],
 input[disabled] {
   cursor: default;
@@ -441,7 +149,6 @@ input[disabled] {
  * 3. Removes excess padding in IE7.
  *    Known issue: excess padding remains in IE6.
  */
-
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box; /* 1 */
@@ -457,18 +164,16 @@ input[type="radio"] {
  * 2. Addresses `box-sizing` set to `border-box` in S5, Chrome (include `-moz`
  *    to future-proof).
  */
-
 input[type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
+     -moz-box-sizing: content-box;  
+          box-sizing: content-box;
 }
 
 /*
  * Removes inner padding and search cancel button in S5, Chrome on OS X.
  */
-
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -477,32 +182,8 @@ input[type="search"]::-webkit-search-decoration {
 /*
  * Removes inner padding and border in FF3+.
  */
-
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
-}
-
-/*
- * 1. Removes default vertical scrollbar in IE6/7/8/9.
- * 2. Improves readability and alignment in all browsers.
- */
-
-textarea {
-  overflow: auto; /* 1 */
-  vertical-align: top; /* 2 */
-}
-
-/* =============================================================================
-$ Tables
-================================================================================ */
-
-/*
- * Remove most spacing between table cells.
- */
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
 }
