Documentation typo fix for browser support setting

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -3,9 +3,9 @@
 //
 // Merges all listed stylesheets and does the SASS & Compass magic
 // DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
+// ==========================================================
 //
-//
-// Support-table for $isOldIE: 0;
+// Support-table for $oldIE: false;
 //
 // Google Chrome
 // Mozilla Firefox 4+
