Set checkbox margin in em's to enable a scalable layout

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -43,7 +43,7 @@ textarea {
 /* ========================= Checkboxes ======================== */
 input[type="checkbox"],
 input[type="radio"] {
-  margin-right: 4px;
+  margin-right: .35em;
 }
 
 /* ========================== Buttons ========================== */
