Removed variable dependencies
To enable the use of image urls for $bodyBackground wich otherwise
would lead to compile errors

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -39,7 +39,7 @@ $columnGutter:          20;     // Inner spacing
 
 // ============================== Backgrounds =============================
 $bodyBackground:        #fff;   // Will be set on <body>
-$contentBackground:     $bodyBackground; // Used for generating some colors
+$contentBackground:     #fff;   // Used for generating some colors
 
 
 // =============================================================================
