Changes to the file-header comments
* To find the beginning of a file search for '§ '
* Set most of the information in SASS comments to produce a cleaner
compiled file

--- a/Assets/_scss/_settings/_shared.scss
+++ b/Assets/_scss/_settings/_shared.scss
@@ -1,13 +1,13 @@
-/* ==========================================================
- * shared.scss
- *
- * Shared styles(%placeholders) to reduce duplicate code
- *
- * Usage:
- * @extend %name;
- *
- * DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#placeholder_selectors_
- * ========================================================== */
+// ==========================================================
+/* § shared.scss */
+//
+// Shared styles(%placeholders) to reduce duplicate code
+//
+// Usage:
+// @extend %name;
+//
+// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#placeholder_selectors_
+// ==========================================================
 
 
 
