--- a/Assets/_scss/base/_base.scss
+++ b/Assets/_scss/base/_base.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * base.scss
- *
- * Basic styling for this site (f.e. Header and Footer)
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § base.scss */
+//
+// Basic styling for this site (f.e. Header and Footer)
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
