--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * forms.scss
- *
- * Basic styling for forms and inputs
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § forms.scss */
+//
+// Basic styling for forms and inputs
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
