--- a/Assets/_scss/base/_headings.scss
+++ b/Assets/_scss/base/_headings.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * headings.scss
- *
- * Styling for Headings and Sub-Headings
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § headings.scss */
+//
+// Styling for Headings and Sub-Headings
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
