--- a/Assets/_scss/base/_links.scss
+++ b/Assets/_scss/base/_links.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * links.scss
- *
- * Basic styling for links
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § links.scss */
+//
+// Basic styling for links
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
