--- a/Assets/_scss/base/_lists.scss
+++ b/Assets/_scss/base/_lists.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * lists.scss
- *
- * Basic styling for typography elements
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § lists.scss */
+//
+// Basic styling for typography elements
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
