--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * media.scss
- *
- * Basic styling for media elements e.g. Images, Video & Audio
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § media.scss */
+//
+// Basic styling for media elements e.g. Images, Video & Audio
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
