--- a/Assets/_scss/base/_typography.scss
+++ b/Assets/_scss/base/_typography.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * typography.scss
- *
- * Basic styling for typography elements
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § typography.scss */
+//
+// Basic styling for typography elements
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
