--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * grid.scss
- *
- * Sets up the grid
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § grid.scss */
+//
+// Sets up the grid
+// DOCS:
+// ==========================================================
 
 
 // =============================================================================
