--- a/Assets/_scss/generic/_print.scss
+++ b/Assets/_scss/generic/_print.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * print.scss
- *
- * Inlined to avoid another HTTP connection
- * DOCS: h5bp.com/r
- * ========================================================== */
+// ==========================================================
+/* § print.scss */
+//
+// Inlined to avoid another HTTP connection
+// DOCS: h5bp.com/r
+// ==========================================================
 
 
 @media print {
