--- a/Assets/_scss/objects/_navigations.scss
+++ b/Assets/_scss/objects/_navigations.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * navigations.scss
- *
- * Basic styling for all site-navigation elements
- * DOCS: http://csswizardry.com/2011/09/the-nav-abstraction/
- * ========================================================== */
+// ==========================================================
+/* § navigations.scss */
+//
+// Basic styling for all site-navigation elements
+// DOCS: http://csswizardry.com/2011/09/the-nav-abstraction/
+// ==========================================================
 
 
 /* =============================================================================
