--- a/Assets/_scss/objects/_t3-general.scss
+++ b/Assets/_scss/objects/_t3-general.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * t3-general.scss
- *
- * Basic styling for typo3 generated elements and classes
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § t3-general.scss */
+//
+// Basic styling for typo3 generated elements and classes
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
