--- a/Assets/_scss/base/_tables.scss
+++ b/Assets/_scss/base/_tables.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * tables.scss
- *
- * Basic styling for tables
- * DOCS:
- * ========================================================== */
+// ==========================================================
+/* § tables.scss */
+//
+// Basic styling for tables
+// DOCS:
+// ==========================================================
 
 
 /* =============================================================================
