--- a/Assets/_scss/generic/_helper.scss
+++ b/Assets/_scss/generic/_helper.scss
@@ -1,9 +1,9 @@
-/* ==========================================================
- * helper.scss
- *
- * Helper Classes from the boilerplate project
- * DOCS: http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
- * ========================================================== */
+// ==========================================================
+/* § helper.scss */
+//
+// Helper Classes from the boilerplate project
+// DOCS: http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
+// ==========================================================
 
 
 /* Quick floats */
