Added a timestamp ruby function
To output a timestamp on the fileheader

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -1,6 +1,8 @@
-// ==========================================================
+/* ==========================================================
+ * FrontEnd Base Version 1.1.1
+ * Compiled on: #{timestamp()}
+ * ========================================================== */
 // main.scss
-/* Base Version 1.1.1 */
 //
 // Merges all listed stylesheets and does the SASS & Compass magic
 // DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#import
