Keep main.scss header-comment
While output_style is :compressed using loud SCSS comments.
/*! COMMENT */

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -1,4 +1,4 @@
-/* ==========================================================
+/*! ==========================================================
  * FrontEnd Base Version 1.1.1
  * Compiled on: #{timestamp()}
  * ========================================================== */
