--- a/Layouts/index.html
+++ b/Layouts/index.html
@@ -8,8 +8,8 @@
 	<title></title>
 	<!-- RWD: <meta name="viewport" content="width=device-width"> -->
 
-	<link rel="stylesheet" href="Assets/css/main.css">
-	<script src="assets/js/vendor/modernizr-2.6.2.min.js"></script>
+	<link rel="stylesheet" href="../Assets/css/main.css">
+	<script src="../Assets/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Ihr Browser ist <em>veraltet!</em> <a href="http://browsehappy.com/">Updaten Sie ihren Browser</a> oder <a href="http://www.google.com/chromeframe/?redirect=true">installieren Sie die fehlende Erweiterung</a> um alle Funktionen zu genießen.</p><![endif]-->
@@ -52,5 +52,5 @@
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="Assets/js/vendor/jquery-1.8.2.min.js"><\/script>')</script> -->
+<script>window.jQuery || document.write('<script src="../Assets/js/vendor/jquery-1.8.2.min.js"><\/script>')</script> -->
 </body></html>
