Removed HTML comments in tables.scss
Due to the rules are moved while compiling

--- a/Assets/_scss/base/_tables.scss
+++ b/Assets/_scss/base/_tables.scss
@@ -34,10 +34,10 @@ $ Contenttable-1 (Bordered Table w/ odd & even)
     padding: 0.5em;
   }
 
-  /*tr*/.tr-even { background: $contentBackground; }
-  /*tr*/.tr-odd { background: color-adjust($contentBackground, 5%); }
-  /*tr*/.tr-last td { border-bottom: 0; }
-  /*td*/.td-0 { border-left: 0; }
+  .tr-even { background: $contentBackground; }
+  .tr-odd { background: color-adjust($contentBackground, 5%); }
+  .tr-last td { border-bottom: 0; }
+  .td-0 { border-left: 0; }
 }
 
 
