--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -12,8 +12,8 @@ $ Attachements & Images
             2: Decrease font-size on figcaption elements
             3: Styling the alt="" Text on images
                http://csswizardry.com/2011/06/styling-alt-text-on-images/
-            4. Removes border when inside `a` element in IE6/7/8/9, FF3.
-            5. Improves image quality when scaled in IE7.
+            4: Removes border when inside `a` element in IE6/7/8/9, FF3.
+            5: Improves image quality when scaled in IE7.
                code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
 ================================================================================ */
 embed,
