--- a/Assets/_scss/generic/_helper.scss
+++ b/Assets/_scss/generic/_helper.scss
@@ -7,12 +7,8 @@
 
 
 /* Quick floats */
-.fl-r {
-  float: right;
-}
-.fl-l {
-  float: left;
-}
+.fl-r { float: right; }
+.fl-l { float: left; }
 
 /* For image replacement */
 .ir {
@@ -61,9 +57,7 @@
 }
 
 /* Hide visually and from screenreaders, but maintain layout */
-.invisible {
-  visibility: hidden;
-}
+.invisible { visibility: hidden; }
 
 /* Contain floats: h5bp.com/q */
 .clearfix {
