--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -13,8 +13,8 @@
 // =============================================================================
 // SASS Setup
 // =============================================================================
-@import "compass/css3";               // Compass setup
-@import "_settings/_all";             // SASS Settings
+@import "compass/css3";               // Compass
+@import "_settings/_all";             // SASS Functions, Mixins and Variables
 
 
 // =============================================================================
@@ -27,11 +27,11 @@
 // =============================================================================
 // Layout
 // =============================================================================
-@import "base/_base";                 // Header, Footer, Logos and Chromeframe
-@import "base/_headings";             // Headings
+@import "base/_base";                 // High-level elements like `html`, `body`, etc.
+@import "base/_headings";             // Double-stranded heading hierarchy
 @import "base/_typography";           // Basic typography
-@import "base/_links";                // Link styling
-@import "base/_lists";                // HTML list elements
+@import "base/_links";                // High-level link styling
+@import "base/_lists";                // Styling for lists
 @import "base/_media";                // Media elements like images, audio and video
 @import "base/_tables";               // Tables
 @import "base/_forms";                // Forms, input's and other form fields
