--- a/Assets/_scss/objects/_t3-general.scss
+++ b/Assets/_scss/objects/_t3-general.scss
@@ -43,7 +43,7 @@ $ CSC-Sitemap
 ================================================================================ */
 .csc-sitemap {
   list-style: disc;
-  margin: 0 0 0 1em;
+  @extend %sass-margin-bottom;
 }
 
 
