--- a/Assets/_scss/base/_tables.scss
+++ b/Assets/_scss/base/_tables.scss
@@ -11,7 +11,8 @@ $ Tables
 ================================================================================ */
 table {
   width: 100%;
-  margin: 0 0 $basicSpacing +em;
+  margin-top: 0;
+  @extend %sass-margin-bottom;
   border-collapse: collapse;
   border-spacing: 0;
 
